--- a/MeetupApp/MeetupApp.Android/Properties/AndroidManifest.xml
+++ b/MeetupApp/MeetupApp.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<application android:label="MeetupApp.Android"></application>
+	<application android:label="MeetupApp.Android">
+    <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDhDi6MwFFEJFwyGpH2_0JytLpsQS6E1nk" />
+    <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+  </application>
 </manifest>
